fixed Header Logo alignement

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,7 @@ a {
     text-decoration: none;
     color: black;
 }
+
+.error404 {
+    font-size: 3rem;
+}
