--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,14 +1,21 @@
 .header {
-  height: 70px;
+  box-sizing:border-box;
+  height: 80px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  font-size: 1.5rem;
 
   .logo-container {
+
+    box-sizing:border-box;  
     height: 100%;
-    width: 70px;
-    padding: 25px;
+    width: 80px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .options {
